[package]
name = "logic-lock"
version = "0.10.0"
edition = "2021"
authors = ["Marco Napetti"]
repository = "https://github.com/nappa85/logic-lock"
description = "MySQL logic locks implemented over sea-orm"
readme = "README.md"
keywords = ["mysql", "lock", "orm"]
categories = ["database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
sea-orm = "0.10.2"
tracing = "0.1.37"

[dev-dependencies]
sea-orm = { version = "0.10.2", features = ["sqlx-mysql", "runtime-tokio-rustls", "debug-print"] }
tokio = { version = "1.21.2", features = ["rt", "macros"] }
tokio-stream = "0.1.11"
tracing-subscriber = "0.3.16"
