[package]
name = "logic-lock"
version = "0.12.0"
edition = "2021"
authors = ["Marco Napetti"]
repository = "https://github.com/nappa85/logic-lock"
documentation = "https://docs.rs/logic-lock"
description = "MySQL logic locks implemented over sea-orm"
readme = "README.md"
keywords = ["mysql", "lock", "orm"]
categories = ["database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
sea-orm = "0.12.0"
tracing = "0.1.37"

[dev-dependencies]
sea-orm = { version = "0.12.0", features = ["sqlx-mysql", "runtime-tokio-rustls", "debug-print"] }
tokio = { version = "1.25.0", features = ["rt", "macros"] }
tokio-stream = "0.1.11"
tracing-subscriber = "0.3.16"
